--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "@headlessui/react": "0.2.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-scripts": "3.4.3"
+    "react-scripts": "3.4.3",
+    "react-hook-form": "^6.15.1"
   },
   "devDependencies": {
     "typescript": "3.8.3"
@@ -19,10 +20,5 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
 }
